Adds all spices

--- a/spices.tex
+++ b/spices.tex
@@ -19,5 +19,69 @@ Tarragon\\
 Garam Masala\\
 Ginger, Ground\\
 
+\section*{All}
+
+Adobo\\
+Allspice\\
+Almond Extract\\
+Balinese Long Pepper\\
+Basil\\
+Bay Leaves\\
+Cardamom\\
+Cayenne Pepper\\
+Celery Seed\\
+Chili Powder\\
+Chili Powder, Green\\
+Cilantro\\
+Cinnamon\\
+Cinnamon Sugar\\
+Cloves\\
+Coconut Extract\\
+Coriander\\
+Cream of Tartar\\
+Cumin\\
+Curry Powder\\
+Dill\\
+Garam Masala\\
+Garlic Powder\\
+Garlic Salt\\
+Garlic, Minced\\
+Ginger\\
+Ground Mustard\\
+Herbs de Provence\\
+Italian Seasoning\\
+Lemon Extract\\
+Lemon Peel\\
+Lemon Pepper\\
+Marjoram\\
+Mint Flakes\\
+Montreal Steak Seasoning\\
+Nutmeg\\
+Onion Powder\\
+Onion, Minced\\
+Orange Peel\\
+Oregano\\
+Paprika\\
+Parsley Flakes\\
+Pepper, Black\\
+Pepper, Crushed Red\\
+Pepper, White\\
+Peppermint Extract\\
+Popcorn Seasoning\\
+Poultry Seasoning\\
+Rosemary\\
+Sage\\
+Salt, Iodized\\
+Salt, Sea\\
+Salt, Seasoned\\
+Savory\\
+Seasoning Blend, Nature's Seasons\\
+Seasoning Blend, Spicy\\
+Spicy Seasoning Blend\\
+Tarragon\\
+Thyme\\
+Vanilla Beans\\
+Vanilla Extract\\
+
 
 \end{document}
