Edit some formatting and add categories

--- a/spices.tex
+++ b/spices.tex
@@ -1,32 +1,110 @@
 \documentclass[twocolumn]{article}
 
-\usepackage[margin=1in]{geometry}
+\usepackage[margin=1in,includehead]{geometry}
+\usepackage{fancyhdr,ulem}
 
-\title{Bonfire Spice Index}
+\pagestyle{fancy}
+\lhead{Bonfire Spice Index}
+\rhead{as of \today}
+\cfoot{}
+\newcommand{\cf}[2]{#1\\\indent\emph{see #2}}
 
 \begin{document}
+\normalem{}
 
-\maketitle
+\section*{Dessert}
+Almond Extract\\
+Cardamom\\
+Cinnamon\\
+Cinnamon Sugar\\
+Cloves\\
+Coconut Extract\\
+Cream of Tartar\\
+Lemon Extract\\
+Mint Flakes\\
+Nutmeg\\
+Peppermint Extract\\
+Vanilla Beans\\
+Vanilla Extract\\
+
+\section*{Extracts}
+Almond Extract\\
+Coconut Extract\\
+Lemon Extract\\
+Peppermint Extract\\
+Vanilla Extract\\
 
 \section*{Herbs}
-
+Cilantro\\
 Dill\\
+Herbes de Provence\\
+Italian Seasoning\\
+Marjoram\\
+Mint Flakes\\
 Rosemary\\
+Sage\\
 Tarragon\\
+Thyme\\
+
+\section*{\sout{Hot} Sexy}
+Cayenne Pepper\\
+Chili Powder\\
+Chili Powder, Green\\
+Paprika\\
+Pepper, Crushed Red\\
 
 \section*{Indian}
-
+Bay Leaves\\
+Cardamom\\
+Coriander\\
+Cumin\\
+Curry Powder\\
 Garam Masala\\
-Ginger, Ground\\
+Garlic\\
+Ginger\\
+Mustard, Ground Yellow\\
+
+\section*{Italian}
+Basil\\
+Garlic Powder\\
+Garlic Salt\\
+Garlic, Minced
+Italian Seasoning\\
+Oregano\\
+Parsley Flakes\\
+Pepper, Crushed Red\\
+
+\section*{Mexican}
+Adobo\\
+Cayenne Pepper\\
+Chili Powder\\
+Chili Powder, Green\\
+Cilantro\\
+Cumin\\
+Garlic\\
+Oregano\\
+Paprika\\
+
+\section*{Seasoning Blends}
+Adobo\\
+Curry Powder\\
+Garam Masala\\
+Herbes de Provence\\
+Italian Seasoning\\
+Montreal Steak Seasoning\\
+Popcorn Seasoning\\
+Poultry Seasoning\\
+Seasoning Blend, Nature's Seasons
+Seasoning Blend, Spicy
 
 \section*{All}
-
 Adobo\\
 Allspice\\
 Almond Extract\\
 Balinese Long Pepper\\
 Basil\\
 Bay Leaves\\
+\cf{Black Pepper}{Pepper, Black}\\
 Cardamom\\
 Cayenne Pepper\\
 Celery Seed\\
@@ -39,6 +117,7 @@ Cloves\\
 Coconut Extract\\
 Coriander\\
 Cream of Tartar\\
+\cf{Crushed Red Pepper}{Pepper, Crushed Red}\\
 Cumin\\
 Curry Powder\\
 Dill\\
@@ -47,8 +126,8 @@ Garlic Powder\\
 Garlic Salt\\
 Garlic, Minced\\
 Ginger\\
-Ground Mustard\\
-Herbs de Provence\\
+\cf{Green Chili Powder}{Chili Powder, Green}\\
+Herbes de Provence\\
 Italian Seasoning\\
 Lemon Extract\\
 Lemon Peel\\
@@ -56,6 +135,7 @@ Lemon Pepper\\
 Marjoram\\
 Mint Flakes\\
 Montreal Steak Seasoning\\
+Mustard, Ground Yellow\\
 Nutmeg\\
 Onion Powder\\
 Onion, Minced\\
@@ -71,17 +151,19 @@ Popcorn Seasoning\\
 Poultry Seasoning\\
 Rosemary\\
 Sage\\
+\cf{Salt, Garlic}{Garlic Salt}\\
 Salt, Iodized\\
 Salt, Sea\\
 Salt, Seasoned\\
 Savory\\
 Seasoning Blend, Nature's Seasons\\
 Seasoning Blend, Spicy\\
-Spicy Seasoning Blend\\
+\cf{Steak Seasoning, Montreal}{Montreal Steak Seasoning}\\
 Tarragon\\
 Thyme\\
 Vanilla Beans\\
 Vanilla Extract\\
+\cf{White Pepper}{Pepper, White}\\
 
 
 \end{document}
