Adds missing linebreak

--- a/spices.tex
+++ b/spices.tex
@@ -94,8 +94,8 @@ Italian Seasoning\\
 Montreal Steak Seasoning\\
 Popcorn Seasoning\\
 Poultry Seasoning\\
-Seasoning Blend, Nature's Seasons
-Seasoning Blend, Spicy
+Seasoning Blend, Nature's Seasons\\
+Seasoning Blend, Spicy\\
 
 \section*{All}
 Adobo\\
